# tcash

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
config/: tcash_config.xml
include/helper/: config.hpp  ext.hpp  log.hpp  loglevel.hpp  setup.hpp  str_ext.hpp
scripts/: debug_build.sh  errors.sh  release_build.sh  run_debug.sh  valgrind.sh
src/: tcash.cpp
src/helper/: config.cpp  ext.cpp  log.cpp  setup.cpp  str_ext.cpp
